--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,15 @@ jobs:
         # Runs a set of commands using the runners shell
       - name: unit-tests
         run: |
-          python -m unittest Amebus/Tests/UnitTests/GuideUnitTest.py
-          python -m unittest Amebus/Tests/UnitTests/GuideServiceUnitTest.py
+          python -m unittest Tests/UnitTests/GuideUnitTest.py
+          python -m unittest Tests/UnitTests/GuideServiceUnitTest.py
       
          # Runs a set of commands using the runners shell
       - name: integration-tests
         run: |
-          python -m unittest Amebus/Tests/IntTests/integration_tests.py
-          python -m unittest Amebus/Tests/IntTests/integration_tests_mock.py
+          python -m unittest Tests/IntTests/integration_tests.py
+          python -m unittest Tests/IntTests/integration_tests_mock.py
           
       - name: e2e-test
         run: |
-          python -m unittest Amebus/Tests/E2E/testAll.py
+          python -m unittest Tests/E2E/testAll.py
