--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,55 +1,30 @@
-# This file is a template, and might need editing before it works on your project.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Python.gitlab-ci.yml
+image: mcr.microsoft.com/dotnet/sdk:latest
 
-# Official language image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/python/tags/
-image: python:latest
+stages:
+  - unit
+  - integration
+  - e2e
 
-# Change pip's cache directory to be inside the project directory since we can
-# only cache local items.
-variables:
-  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-
-# Pip's cache doesn't store the python packages
-# https://pip.pypa.io/en/stable/reference/pip_install/#caching
-#
-# If you want to also cache the installed packages, you have to install
-# them in a virtualenv and cache it as well.
-cache:
-  paths:
-    - .cache/pip
-    - venv/
-
-before_script:
-  - python -V  # Print out python version for debugging
-  - pip install virtualenv
-  - virtualenv venv
-  - source venv/bin/activate
-
-test:
-  script:
-    - python setup.py test
-
-run:
+unit tests:
+  tags:
+    - linux
   script:
     - python -m unittest Tests/UnitTests/GuideUnitTest.py
-    # an alternative approach is to install and run:
     - python -m unittest Tests/UnitTests/GuideServiceUnitTest.py
-    # run the command here
-  artifacts:
-    paths:
-      - dist/*.whl
+  stage: unit
 
-# pages:
-#   script:
-#     - pip install sphinx sphinx-rtd-theme
-#     - cd doc ; make html
-#     - mv build/html/ ../public/
-#   artifacts:
-#     paths:
-#       - public
-#   rules:
-#     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+integration tests:
+  tags:
+    - linux
+  script:
+    - python -m unittest Tests/IntTests/integration_tests.py
+    - python -m unittest Tests/IntTests/integration_tests_mock.py
+  stage: integration
+
+e2e tests:
+  tags: 
+    - linux
+  script:
+    - python -m unittest Tests/E2E/testAll.py
+  stage:
+    e2e
