--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,22 @@
 image: python:latest
 
+# Change pip's cache directory to be inside the project directory since we can
+# only cache local items.
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+
+# Pip's cache doesn't store the python packages
+# https://pip.pypa.io/en/stable/topics/caching/
+#
+# If you want to also cache the installed packages, you have to install
+# them in a virtualenv and cache it as well.
+cache:
+  paths:
+    - .cache/pip
+    - venv/
+
 before_script:
-  - pip install peewee
-  
-stages:
-  - unit
-  - integration
-  - e2e
-
-unit tests:
-  tags:
-    - linux
-  script:
-    - python -m unittest Tests/UnitTests/GuideUnitTest.py
-    - python -m unittest Tests/UnitTests/GuideServiceUnitTest.py
-  stage: unit
-
-integration tests:
-  tags:
-    - linux
-  script:
-    - python -m unittest Tests/IntTests/integration_tests.py
-    - python -m unittest Tests/IntTests/integration_tests_mock.py
-  stage: integration
-
-e2e tests:
-  tags: 
-    - linux
-  script:
-    - python -m unittest Tests/E2E/testAll.py
-  stage:
-    e2e
+  - python --version  # For debugging
+  - pip install virtualenv
+  - virtualenv venv
+  - source venv/bin/activate
