--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,40 @@
-image: python:latest
+stages:
+  - build
+  - test
 
-unit-test:
-    stage: test
-    tags:
-        - docker
-    script:
-        - echo "Testing"
-        - python3 test_gaussian_sum_formula.py
+build-image:
+  stage: build
+  variables:
+    DOCKER_DRIVER: overlay2
+    DOCKER_HOST: tcp://dockerservice:2375/
+    DOCKER_TLS_CERTDIR: ""
+  image: docker:20.10.14
+  services:
+    - name: docker:20.10.14-dind
+      alias: dockerservice
+  before_script:
+    - sleep 30
+    - docker info
+  script:
+  - echo ${CI_BUILD_TOKEN} | docker login -u gitlab-ci-token --password-stdin ${CI_REGISTRY}
+  - docker build --pull --no-cache -t ${CI_REGISTRY_IMAGE}:1.0.0 - << EOF
 
-doku:
-    stage: deploy
-    tags:
-        - docker
-    script:
-        - echo "Create Doku"
-        - pydoc3 -w gaussian_sum_formula
-    artifacts:
-        paths:
-            - "*.html"
+    FROM alpine:3.13.1
 
+    RUN apk update
+    RUN apk upgrade
+    RUN apk add --no-cache git ca-certificates curl python3 jq apache2-utils nmap-ncat netcat-openbsd wget
 
-lint-test:
-    stage: test
-    tags:
-        - docker
-    script:
-        - echo "Linting"
-        - pip3 install pylint
-        - pylint gaussian_sum_formula.py
+    ENTRYPOINT []
+
+    EOF
+  - docker push ${CI_REGISTRY_IMAGE}:1.0.0
+
+test:
+  stage: test
+  image: ${CI_REGISTRY_IMAGE}:1.0.0
+  variables:
+    GIT_STRATEGY: none
+  script: 
+    - sleep 10
+  parallel: 50
