--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,13 +2,12 @@ image: python:3.10.8-alpine3.17
 
 stages:
   - unit
-  - integration
-  - e2e
+  # - integration
+  # - e2e
 
 unit tests:
   script:
-    - python -m unittest Tests/UnitTests/GuideUnitTest.py
-    - python -m unittest Tests/UnitTests/GuideServiceUnitTest.py
+    - echo "fuck"
   stage: unit
 
 integration tests:
