--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,23 @@ image: python:3.10.8-alpine3.17
 
 stages:
   - unit
+  - integration
+  - e2e
 
 unit tests:
   script:
-    - python3 --version
+    - pip3 install peewee
+    - python3 -m unittest Tests/UnitTests/GuideUnitTest.py
+    - python3 -m unittest Tests/UnitTests/GuideServiceUnitTest.py
   stage: unit
+
+integration tests:
+  script:
+    - python3 -m unittest Tests/IntTests/integration_tests.py
+    - python3 -m unittest Tests/IntTests/integration_tests_mock.py
+  stage: integration
+
+e2e tests:
+  script:
+    - python3 -m unittest Tests/E2E/testAll.py
+  stage: e2e
