--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ unit tests:
 
 integration tests:
   script:
+    - pip3 install peewee
     - pip3 install coverage
     - python3 -m coverage run -m unittest Tests/IntTests/integration_tests.py
     - python3 -m coverage run -m unittest Tests/IntTests/integration_tests_mock.py
@@ -26,6 +27,7 @@ integration tests:
 
 e2e tests:
   script:
+    - pip3 install peewee
     - pip3 install coverage
     - python3 -m coverage run -m unittest Tests/E2E/testAll.py
     - python3 -m coverage report
