--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,8 @@ stages:
 unit tests:
   script:
     - pip3 install peewee
-    - pip3 install coverage
+    - pip3 install pytest
+    - pip3 install allure-pytest
     - python3 -m coverage run -m unittest Tests/UnitTests/GuideServiceUnitTest.py
     - python3 -m coverage run -m unittest Tests/UnitTests/GuideUnitTest.py
     - python3 -m coverage report
