--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,6 @@ unit tests:
     - pip3 install peewee
     - pip3 install pytest
     - pip3 install allure-pytest
-    - python3 -m coverage run -m unittest Tests/UnitTests/GuideServiceUnitTest.py
-    - python3 -m coverage run -m unittest Tests/UnitTests/GuideUnitTest.py
-    - python3 -m coverage report
-    - python3 -m coverage html
+    - python3 -m pytest Tests/UnitTests/GuideServiceUnitTest.py --alluredir=allure-results
+    - python3 -m pytest Tests/UnitTests/GuideUnitTest.py --alluredir=allure-results
   stage: unit
