--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 unit tests:
   script:
-    - pip3 -r requirements.txt
+    - pip3 install -r requirements.txt
     - python3 -m pytest Tests/UnitTests/GuideServiceUnitTest.py --alluredir=allure-results
     - python3 -m pytest Tests/UnitTests/GuideUnitTest.py --alluredir=allure-results
     - python3 -m allure serve allure-results
